# claude_receptionist

./: .gitignore  CLAUDE.md  SPEC.md
.claude/: settings.json
ai/: main.py  pyproject.toml
ai/ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai/orchestrator/: sentence_splitter.py  state.py  stub_llm.py  stub_stt.py  stub_tts.py
ai/services/: model_registry.py  stt.py  tts.py
ai/shared/schemas/: events.py
ai/tests/integration/: test_audio_fidelity.py  test_barge_in.py  test_domino_playback.py  test_en_stt.py  test_language_landing.py  test_latency_harness.py  test_latency_targets.py  test_session_reset.py  test_stub_stt_roundtrip.py  test_tts_voices.py  test_utterance_end.py  test_vad_config.py  test_vi_stt.py  test_ws_transport.py
ai/tests/unit/: test_audio_fidelity.py  test_barge_in.py  test_en_stt.py  test_language_landing.py  test_latency_harness.py  test_sentence_splitter.py  test_session_registry.py  test_session_reset.py  test_stub_llm.py  test_stub_stt.py  test_stub_tts.py  test_tts_voices.py  test_vad_config.py  test_vi_stt.py
docker/: Dockerfile.ai  Dockerfile.be  Dockerfile.fe  compose.yaml
docs/decisions/: 0008-runtime-stack.md  0009-websocket-transport.md  0010-llm-openai-compatible-api.md  0011-stt-tts-model-selection.md
docs/product/: business-functions.md  deployment.md  overview.md  ui.md  voice-loop.md
docs/stories/epics/E01-P0-skeleton/: US-P0-1-websocket-transport.md  US-P0-2-language-landing.md  US-P0-3-vad-endpointing.md  US-P0-4-stub-stt.md  US-P0-5-domino-tts.md  US-P0-6-barge-in.md  US-P0-7-session-reset.md  US-P0-8-latency-harness.md  initiative.md
docs/stories/epics/E02-P1-models/: US-P1-1-vi-stt.md  US-P1-2-en-stt.md  US-P1-3-tts-voices.md  US-P1-4-audio-fidelity.md  US-P1-5-gb10-latency.md  initiative.md  (+1 more)
fe/voice-agent/: package-lock.json  package.json  tsconfig.tsbuildinfo
fe/voice-agent/app/: globals.css  layout.tsx  page.tsx
(+8 files in other folders)
