[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4",
    "httpx>=0.27",
    "starlette>=0.37",
]
# P1 model dependencies — install the group matching your target hardware
vi-stt = [
    "sherpa-onnx>=1.10",
    "huggingface_hub>=0.23",
    "numpy>=1.26",
    "soundfile>=0.12",
]
en-stt = [
    "nemo_toolkit[asr]>=2.0",
    "numpy>=1.26",
]
vi-tts = [
    "torch>=2.3",
    "numpy>=1.26",
]
en-tts = [
    "chatterbox-tts>=0.1",
    "torch>=2.3",
    "torchaudio>=2.3",
    "numpy>=1.26",
]
models = [
    "ai-service[vi-stt]",
    "ai-service[en-stt]",
    "ai-service[vi-tts]",
    "ai-service[en-tts]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "services*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
